--- a/css/pagina2.css
+++ b/css/pagina2.css
@@ -1,5 +1,5 @@
 #menu {
-  background-color: black;
+  background-color: red;
 }
 #menu ul {
   list-style: none;
@@ -11,11 +11,11 @@
   padding: 5px;
 }
 #menu ul li a {
-  color: chocolate;
+  color: white;
   display: block;
   padding: 50px 50px;
   text-decoration: none;
 }
 #menu ul li a:hover {
-  background-color: darkgreen;
+  background-color: yellow;
 }
